--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rahulra3621/bookclubapp.git"
+    "url": "https://github.com/rahulra3621/book_club.git"
   },
   "license": "ISC",
   "author": "Rahul Rajput",
